--- a/LRC.html
+++ b/LRC.html
@@ -55,16 +55,16 @@
 		<!-- THE FEATURETTES -->
 
 	<hr class="featurette-divider">
-	<h1 style="text-align: center;">Our Executive</h1>
+	<h1 style="text-align: center;">Our Executive (Not Yet Selected- Will be updated soon)</h1>
 	<hr>
 
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">Our President.</h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="lead">...</p>
       </div>
       <div class="col-md-5">
-        <img src="Images/Display3.jpg" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
+        <img src="Images/Display3.jpg" alt="Our President" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
       </div>
     </div>
 
@@ -73,10 +73,10 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Our Deputy President.</h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="lead">...</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <img src="Images/Display2.jpg" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
+        <img src="Images/Display2.jpg" alt="Our Deputy President" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
       </div>
     </div>
 
@@ -85,10 +85,10 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">Our Secretary.</h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="lead">...</p>
       </div>
       <div class="col-md-5">
-        <img src="Images/Display4.jpg" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
+        <img src="Images/Display4.jpg" alt="Our Secretary" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
       </div>
     </div>
 
@@ -97,10 +97,10 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Our Deputy Secretary.</h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="lead">...</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <img src="Images/Display2.jpg" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
+        <img src="Images/Display2.jpg" alt="Our Deputy Secretary" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
       </div>
     </div>
 
@@ -112,7 +112,7 @@
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
       </div>
       <div class="col-md-5">
-        <img src="Images/Display4.jpg" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
+        <img src="Images/Display4.jpg" alt="Our Treasurer" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
       </div>
     </div>
 
