--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <header id="header">
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
-        <a class="navbar-brand" href="#">X</a>
+        <a class="navbar-brand" href="#">Elangwane</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -55,7 +55,7 @@
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="Images/Display4.jpg" width="100%">
+        <img id="image1" src="Images/Display4.jpg" width="100%">
         <div class="container">
           <div class="carousel-caption text-left">
             <h1>Welcome.</h1>
