--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <header id="header">
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
-        <a class="navbar-brand" href="#">Elangwane</a>
+        <a class="navbar-brand" href="#">X</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
