--- a/html/contact.html
+++ b/html/contact.html
@@ -21,7 +21,7 @@
   <section id="navigation">
     <div class="col">
       <nav class="container-fluid navbar navbar-expand-lg navbar-dark bg-primary">
-        <a href="index.html" class="navbar-brand"><h3>Elangwane</h3></a>
+        <a href="/index.html" class="navbar-brand"><h3>Elangwane</h3></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
