--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Welcome.</h1>
-              <p>A very warm welcome to Elangwane M.S.T Academy, I hope that our website provides you with a comprehensive introduction to our values, expectations and way of working. We place a strong emphasis on working hard, supporting one another and good standards of behaviour and courtesy.</p>
+              <p>A very warm welcome to Elangwane M.S.T Academy, I hope that our website provides you with a comprehensive introduction to our values, expectations and way of working. We place a strong emphasis on working hard, supporting one another and good standards of behavior and courtesy.</p>
               <p><a class="btn btn-lg btn-primary" href="#More" role="button">Learn More &raquo;</a></p>
             </div>
           </div>
@@ -75,7 +75,7 @@
         <div class="col-lg-4">
           <img src="/Images/Display4.jpg" width="140" height="140" class="rounded-circle">
           <h2>Sports</h2>
-          <p>We don't have any sporting events at the time of this writting as lockdown restrictions are still in place to ensure the safety of our learners</p>
+          <p>We don't have any sporting events at the time of this writing as lock down restrictions are still in place to ensure the safety of our learners</p>
           <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
         </div>
       </div>
