--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
   <section id="navigation">
     <div class="col">
       <nav class="container-fluid navbar navbar-expand-lg navbar-dark bg-primary">
-        <a href="/index.html" class="navbar-brand"><h3>Elangwane</h3></a>
+        <a href="index.html" class="navbar-brand"><h3>Elangwane</h3></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -29,13 +29,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a href="/html/about.html" class="nav-link">About</a>
+              <a href="about.html" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-              <a href="/html/curriculum.html" class="nav-link">Curriculum</a>
+              <a href="curriculum.html" class="nav-link">Curriculum</a>
             </li>
             <li class="nav-item">
-              <a href="/html/contact.html" class="nav-link">Contact</a>
+              <a href="contact.html" class="nav-link">Contact</a>
             </li>
           </ul>
         </div>
