--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a href="/html/about.html" class="nav-link">About</a>
+              <a href="about.html" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-              <a href="/html/curriculum.html" class="nav-link">Curriculum</a>
+              <a href="curriculum.html" class="nav-link">Curriculum</a>
             </li>
             <li class="nav-item">
-              <a href="/html/contact.html" class="nav-link">Contact</a>
+              <a href="contact.html" class="nav-link">Contact</a>
             </li>
           </ul>
         </div>
