--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Siphesihle Thomo">
 	<title>Elangwane M.S.T.A</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-	<link href="/css/styles.css" rel="stylesheet">
+	<link href="css/styles.css" rel="stylesheet">
 
 	<style type="text/css">
 		p, h1 {
@@ -46,7 +46,7 @@
 	<div id="#carousel" class="carousel slide" data-ride="carousel">
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="/Images/Display3.jpg" width="100%">
+				<img src="Images/Display3.jpg" width="100%">
 				<div class="container">
           <div class="carousel-caption">
             <h1>More About US</h1>
