--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Siphesihle Thomo">
 	<title>Elangwane M.S.T.A</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-	<link href="/css/styles.css" rel="stylesheet">
+	<link href="css/styles.css" rel="stylesheet">
 	<style type="text/css">
 		p, h1 {
 			text-align: center;
