--- a/curriculum.html
+++ b/curriculum.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Siphesihle Thomo">
 	<title>Elangwane M.S.T.A</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-	<link href="/css/styles.css" rel="stylesheet">
+	<link href="css/styles.css" rel="stylesheet">
 
 	<style type="text/css">
 		p, h1 {
@@ -47,7 +47,7 @@
 	<div id="myCarousel" class="carousel slide" data-ride="carousel">
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="/Images/Display4.jpg" width="100%">
+				<img src="Images/Display4.jpg" width="100%">
 				<div class="container">
           <div class="carousel-caption">
         		<h1>About Our Curriculum</h1>
@@ -91,7 +91,7 @@
         <p class="lead">Information technology is the study, design, development, implementation, support or management of computer-based information systems—particularly software applications and computer hardware.</p>
       </div>
       <div class="col-md-5">
-        <img src="/Images/I.T.jpg" alt="Programming"class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
+        <img src="Images/I.T.jpg" alt="Programming"class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
       </div>
     </div>
 
@@ -103,7 +103,7 @@
         <p class="lead">Accounting is the process of recording financial transactions pertaining to a business. The accounting process includes summarizing, analyzing and reporting these transactions to oversight agencies, regulators and tax collection entities.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <img src="/Images/Accounting.jpg" alt="The Accounting Cycle" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
+        <img src="Images/Accounting.jpg" alt="The Accounting Cycle" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
       </div>
     </div>
 
@@ -115,7 +115,7 @@
         <p class="lead">CAT teaches students about the various components involved in computer systems, as well as an introduction into how to use computers effectively in every day situations.</p>
       </div>
       <div class="col-md-5">
-        <img src="/Images/CAT.png" alt="CAT textbook" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
+        <img src="Images/CAT.png" alt="CAT textbook" class="featurette-image img-lg img-fluid mx-auto" width="500" height="500">
       </div>
     </div>
 
