updated fonts and links

--- a/index.html
+++ b/index.html
@@ -64,19 +64,19 @@
           <img src="Images/Display2.jpg" width="140" height="140" class="rounded-circle">
           <h2>Curriculum</h2>
           <p>We have a special curriculum that focuses on STM(Science,Technology and Mathematics) subjects, We currently offer Physical Sciences, CAT, Accounting and more.</p>
-          <p><a class="btn btn-primary" href="/html/curriculum.html" role="button">View More! &raquo;</a></p>
+          <p><a class="btn btn-primary" href="curriculum.html" role="button">View More! &raquo;</a></p>
         </div>
         <div class="col-lg-4">
           <img src="Images/Display3.jpg" width="140" height="140" class="rounded-circle">
           <h2>Representative Council of Learners</h2>
           <p>The RCL is a legislated body, whose purpose is to ensure that student opinion on the running of the school is heard and noted.</p>
-          <p><a class="btn btn-primary" href="/html/lrc.html" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-primary" href="lrc.html" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-lg-4">
           <img src="Images/Display4.jpg" width="140" height="140" class="rounded-circle">
           <h2>Sports</h2>
           <p>We don't have any sporting events at the time of this writing as lock down restrictions are still in place to ensure the safety of our learners</p>
-          <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
+          <!-- <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p> -->
         </div>
       </div>
 
