--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
 		<hr class="featurette-divider">
 
     		<footer id="footer" class="container">
-    			<p>Website built by &copy;<a href="mailto:seansthomo@gmail.com"> Siphesihle Thomo &middot; </p>
+    			<p>Website built by &copy;<a href="https://siphesihlethomo.com/"> Siphesihle Thomo &middot; </p>
   		</footer>
 	</main>
 
