--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <!-- FOOTER -->
       <footer id="footer"  class="container">
         <p class="float-right"><a href="#">Back to top</a></p>
-        <p>Website built by &copy; <a href="mailto:seansthomo@gmail.com">Siphesihle Thomo &middot;</p>
+        <p>Website built by &copy; <a href="https://siphesihlethomo.com/">Siphesihle Thomo &middot;</p>
       </footer>
   </main>
 
