--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
 	
 		<footer id="footer" class="container">
    		<p class="float-right"><a href="#">Back to top</a></p>
-   		<p>Website built by &copy; <a href="https://siphesihlethomo.com/">Siphesihle Thomo &middot;</p>
+   		<p>Built by &copy; <a href="https://siphesihlethomo.com/">Siphesihle Thomo &middot;</p>
 		</footer>
 	
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
