--- a/curriculum.html
+++ b/curriculum.html
@@ -135,7 +135,7 @@
 
   		<footer id="footer" class="container">
    		 <p class="float-right"><a href="#">Back to top</a></p>
-   		 <p>Website built by &copy; <a href="https://siphesihlethomo.com/">Siphesihle Thomo &middot;</p>
+   		 <p>Built by &copy; <a href="https://siphesihlethomo.com/">Siphesihle Thomo &middot;</p>
  		</footer>
 	</main>
 	
